# NowLiveWeb

./: .env.example  .eslintrc.json  .gitignore  .pnp.cjs  .prettierrc.json  Cargo.toml  Makefile  README.md  bun.lockb  next.config.js  nuxt.config.js  package-lock.json  package.json
.github/: dependabot.yml
app/: home.module.scss  layout.module.scss  layout.tsx  page.tsx
app/auth/: auth.module.scss  page.tsx
app/auth/callback/: page.tsx
app/install/: route.ts
components/: Layout.tsx  Main.vue
pages/: _app.tsx  index.tsx  index.vue  test.vue
pages/api/joke/: index.ts  text.ts
pages/auth/: callback.tsx  index.tsx
public/models/: NowLiveIcon.blend  NowLiveIcon.blend1
public/models/icon/: NowLiveIcon.blend  NowLiveIcon.blend1  NowLiveIcon.gltf
src/: app.rs  lib.rs
src/app/: globals.scss  layout.module.scss  layout.tsx  page.tsx  url.ts
src/app/auth/: auth.module.scss  page.tsx
src/app/auth/callback/: page.tsx
src/app/install/: route.ts
src/components/: Layout.tsx  Page.tsx  nav.rs
src/pages/: _app.tsx  index.tsx
src/pages/api/: install.ts
src/pages/auth/: callback.tsx  index.tsx
src/routes/: auth.rs  mod.rs
src/styles/: Auth.module.scss  Home.module.scss  Layout.module.scss  globals.scss  include.scss
static/: index.html  styles.scss
styles/: Auth.module.scss  Home.module.scss
tests/: lib.rs  playwright.js  test.spec.ts
