[package]
authors = ["Juliette Cordor"]
categories = ["wasm"]
description = "The website for NowLive"
edition = "2018"
license = "Apache-2.0/MIT"
name = "now_live_web"
readme = "./README.md"
repository = "https://github.com/jewlexx/NowLiveWeb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
yew = "0.19.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.14"
gloo-utils = "0.1.0"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]

[profile.release]
lto = true
opt-level = "s"